grayreleasing/spring-cloud-tencent/gray-chain-releasing-senario-1/k8s/02-envoy-config.yaml
#  Tencent is pleased to support the open source community by making Polaris available.
#  Copyright (C) 2019 THL A29 Limited, a Tencent company. All rights reserved.
#  Licensed under the BSD 3-Clause License (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#  https://opensource.org/licenses/BSD-3-Clause
#  Unless required by applicable law or agreed to in writing, software distributed
#  under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
#  CONDITIONS OF ANY KIND, either express or implied. See the License for the
#  specific language governing permissions and limitations under the License.
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: bootstrap-config
  namespace: gray-chain-sct-1
data:
  envoy.yaml: |-
    node:
      id: sct-gray-1/60c543b9-df2e-4610-b057-2fef16a973bd~10.0.5.52
      cluster: envoy-cluster
    dynamic_resources:
      lds_config:
        resource_api_version: V3
        path_config_source:
          path: /var/lib/xds/lds.yaml
      cds_config:
        resource_api_version: V3
        path_config_source:
          path: /var/lib/xds/cds.yaml
      ads_config:
        api_type: GRPC
        transport_api_version: V3
        grpc_services:
        - google_grpc:
            target_uri: "polaris.polaris-system:15010"
            stat_prefix: polarismesh
            channel_args:
              args:
                grpc.http2.max_pings_without_data:
                  int_value: 1
                grpc.keepalive_time_ms:
                  int_value: 10000
                grpc.keepalive_timeout_ms:
                  int_value: 20000
    admin:
      access_log_path: /dev/stdout
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 15000
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: cds-config
  namespace: gray-chain-sct-1
data:
  cds.yaml: |-
    resources:
    - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
      name: user
      type: EDS
      eds_cluster_config:
        service_name: user
        eds_config:
          ads: {}
          resource_api_version: V3
      connect_timeout: 5s
      lb_subset_config:
        fallback_policy: ANY_ENDPOINT
        subset_selectors:
        - keys:
          - version
          fallback_policy: NO_FALLBACK
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: lds-config
  namespace: gray-chain-sct-1
data:
  lds.yaml: |-
      resources:
        - '@type': type.googleapis.com/envoy.config.listener.v3.Listener
          name: listener_15001
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 15001
          filter_chains:
            - filters:
                - name: envoy.http_connection_manager
                  typed_config:
                    '@type': >-
                      type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    stat_prefix: http
                    http_filters:
                      - name: envoy.router
                        typed_config:
                          '@type': >-
                            type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                    route_config:
                      name: local_route
                      virtual_hosts:
                        - name: base_service
                          domains:
                            - "base.service.com"
                          routes:
                            - match:
                                prefix: "/"
                              route:
                                cluster: user
                                metadata_match:
                                  filter_metadata:
                                    envoy.lb:
                                      version: v1.0.0
                        - name: gray_service
                          domains:
                            - "gray.service.com"
                          routes:
                            - match:
                                prefix: "/"
                              request_headers_to_add:
                                - header:
                                    key: gray
                                    value: "true"
                              route:
                                cluster: user
                                metadata_match:
                                  filter_metadata:
                                    envoy.lb:
                                      version: v2.0.0
