grayreleasing/spring-cloud-tencent/gray-chain-releasing-senario-1/k8s/05-microservices.yaml
#  Tencent is pleased to support the open source community by making Polaris available.
#  Copyright (C) 2019 THL A29 Limited, a Tencent company. All rights reserved.
#  Licensed under the BSD 3-Clause License (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#  https://opensource.org/licenses/BSD-3-Clause
#  Unless required by applicable law or agreed to in writing, software distributed
#  under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
#  CONDITIONS OF ANY KIND, either express or implied. See the License for the
#  specific language governing permissions and limitations under the License.
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: sct-gray-decorate
  namespace: gray-chain-sct-1
  labels:
    account: decorate
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: decorate
  name: decorate-v1
  namespace: gray-chain-sct-1
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: decorate
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.polarismesh.cn/inject: "false"
      labels:
        app: decorate
        version: v1.0.0
    spec:
      containers:
        - image: polarismesh/sct-gray-releasing-decorate-v1:0.0.1-alpha.3
          imagePullPolicy: Always
          name: sct-gray-releasing-decorate-v1
          env:
            - name: APP_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: APP_VERSION
              value: v1.0.0
            - name: POLARIS_SERVER_GRPC_ADDRESS
              value: grpc://polaris.polaris-system:8091
          resources:
            limits:
              cpu: "500m"
              memory: 1000Mi
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: decorate
  name: decorate-v2
  namespace: gray-chain-sct-1
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: decorate
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.polarismesh.cn/inject: "false"
      labels:
        app: decorate
        version: v2.0.0
    spec:
      containers:
        - image: polarismesh/sct-gray-releasing-decorate-v1:0.0.1-alpha.3
          imagePullPolicy: Always
          name: sct-gray-releasing-decorate-v2
          env:
            - name: GRAY
              value: "true"
            - name: APP_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: APP_VERSION
              value: v2.0.0
            - name: POLARIS_SERVER_GRPC_ADDRESS
              value: grpc://polaris.polaris-system:8091
          resources:
            limits:
              cpu: "500m"
              memory: 1000Mi
      restartPolicy: Always
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: sct-gray-user
  namespace: gray-chain-sct-1
  labels:
    account: user
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: user
  name: user-v1
  namespace: gray-chain-sct-1
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: user
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.polarismesh.cn/inject: "false"
      labels:
        app: user
        version: v1.0.0
    spec:
      containers:
        - image: polarismesh/sct-gray-releasing-user-v1:0.0.1-alpha.3
          imagePullPolicy: Always
          name: sct-gray-releasing-user-v1
          env:
            - name: APP_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: APP_VERSION
              value: v1.0.0
            - name: SCT_METADATA_CONTENT_RAW_TRANSHEADERS
              value: gray
            - name: POLARIS_SERVER_GRPC_ADDRESS
              value: grpc://polaris.polaris-system:8091  
          resources:
            limits:
              cpu: "500m"
              memory: 1000Mi
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: user
  name: user-v2
  namespace: gray-chain-sct-1
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: user
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.polarismesh.cn/inject: "false"
      labels:
        app: user
        version: v1.0.0
    spec:
      containers:
        - image: polarismesh/sct-gray-releasing-user-v2:0.0.1-alpha.3
          imagePullPolicy: Always
          name: sct-gray-releasing-user-v2
          env:
            - name: APP_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: APP_VERSION
              value: v2.0.0
            - name: SCT_METADATA_CONTENT_RAW_TRANSHEADERS
              value: gray
            - name: POLARIS_SERVER_GRPC_ADDRESS
              value: grpc://polaris.polaris-system:8091  
          resources:
            limits:
              cpu: "500m"
              memory: 1000Mi
      restartPolicy: Always
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: sct-gray-credit
  namespace: gray-chain-sct-1
  labels:
    account: credit
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: credit
  name: credit-v1
  namespace: gray-chain-sct-1
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: credit
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.polarismesh.cn/inject: "false"
      labels:
        app: credit
        version: v1.0.0
    spec:
      containers:
        - image: polarismesh/sct-gray-releasing-credit-v1:0.0.1-alpha.3
          imagePullPolicy: Always
          name: sct-gray-releasing-credit-v1
          env:
            - name: APP_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: APP_VERSION
              value: v1.0.0
            - name: SCT_METADATA_CONTENT_RAW_TRANSHEADERS
              value: gray
            - name: POLARIS_SERVER_GRPC_ADDRESS
              value: grpc://polaris.polaris-system:8091  
          resources:
            limits:
              cpu: "500m"
              memory: 1000Mi
      restartPolicy: Always
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: sct-gray-promotion
  namespace: gray-chain-sct-1
  labels:
    account: promotion
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: promotion
  name: promotion-v1
  namespace: gray-chain-sct-1
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: promotion
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.polarismesh.cn/inject: "false"
      labels:
        app: promotion
        version: v1.0.0
    spec:
      containers:
        - image: polarismesh/sct-gray-releasing-promotion-v1:0.0.1-alpha.3
          imagePullPolicy: Always
          name: sct-gray-releasing-promotion-v1
          env:
            - name: APP_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: APP_VERSION
              value: v1.0.0
            - name: SCT_METADATA_CONTENT_RAW_TRANSHEADERS
              value: gray
            - name: POLARIS_SERVER_GRPC_ADDRESS
              value: grpc://polaris.polaris-system:8091  
          resources:
            limits:
              cpu: "500m"
              memory: 1000Mi
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: promotion
  name: promotion-v2
  namespace: gray-chain-sct-1
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: promotion
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.polarismesh.cn/inject: "false"
      labels:
        app: promotion
        version: v2.0.0
    spec:
      containers:
        - image: polarismesh/sct-gray-releasing-promotion-v2:0.0.1-alpha.3
          imagePullPolicy: Always
          name: sct-gray-releasing-promotion-v2
          env:
            - name: APP_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: APP_VERSION
              value: v2.0.0
            - name: SCT_METADATA_CONTENT_RAW_TRANSHEADERS
              value: gray
            - name: POLARIS_SERVER_GRPC_ADDRESS
              value: grpc://polaris.polaris-system:8091  
          resources:
            limits:
              cpu: "500m"
              memory: 1000Mi
      restartPolicy: Always
